# TravelBalance

./: .env  .gitignore  Doc.docx  Dockerfile  README.md  heroku.yml  vercel.json  ~$Doc.docx
backend/: Dockerfile  Procfile  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt  requirements2.txt
backend/api/: load_countries.py  permissions.py  subscription_restrictions.py  urls.py  webhooks.py
backend/api/currency/: admin.py  apps.py  currencies_rates_services.py  email.py  fetch_currencies_rates.py  models.py  serializers.py  services.py  tasks.py
backend/api/currency/migrations/: 0001_initial.py  0002_currencyrates_currency_cu_date_60df4a_idx.py
backend/api/currency/templates/: fetch_currency_failed_email.html
backend/api/expense/: admin.py  apps.py  models.py  serializers.py  views.py
backend/api/expense/migrations/: 0001_initial.py  0002_alter_expense_options_remove_expense_data_and_more.py  0003_alter_expense_category.py  0004_alter_expense_date.py  0005_alter_expense_cost.py  0006_alter_expense_title.py  0007_expense_currency.py
backend/api/subscription/: JWT.py  apps.py  email.py  tasks.py  views.py
backend/api/trip/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/api/user/: admin.py  apps.py  email.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/core/: celery.py  mongodb_connection.py  settings.py  urls.py
backend/nginx/: nginx.config
backend/tests/mixins/: authentication.py
backend/web/: urls.py  views.py
backend/web/templates/: index.html
(+95 files in other folders)
